# ContractWhistRust

./: .gitignore  Cargo.toml  README.md  thinking.md
src/: bin.rs  card.rs  deck.rs  game.rs  hand.rs  lib.rs  main.rs  player.rs  rank.rs  suit.rs  trick.rs
