[package]
name = "mormon-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "mormon_bridge"
path = "src/lib.rs"

[[bin]]
name = "mormon_bridge_game"
path = "src/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
