[package]
name = "contract-whist-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "contract_whist"
path = "src/lib.rs"

[[bin]]
name = "contract_whist_game"
path = "src/bin.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
playing_cards = { path = "../playing_cards" }
